# imgui-rs

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
docs/: BACKENDS.md  CHANGELOG.txt  CONTRIBUTING.md  EXAMPLES.md  FAQ.md  FONTS.md  README.md  TODO.txt
examples/: color_node_editor.cpp  graph.h  hello.cpp  imgui_demo.cpp  imgui_demo_cpp.rs  imgui_examples.sln  main.cpp  multi_editor.cpp  save_load.cpp
examples/example_allegro5/: README.md  example_allegro5.vcxproj  main.cpp
examples/example_android_opengl3/: CMakeLists.txt  main.cpp
examples/example_apple_metal/: README.md  main.mm
examples/example_apple_opengl2/: main.mm
examples/example_emscripten_opengl3/: Makefile  README.md  main.cpp  shell_minimal.html
examples/example_emscripten_wgpu/: Makefile  README.md  main.cpp
examples/example_glfw_metal/: Makefile  main.mm
examples/example_glfw_opengl2/: Makefile  example_glfw_opengl2.vcxproj  main.cpp
examples/example_glfw_opengl3/: Makefile  example_glfw_opengl3.vcxproj  main.cpp
examples/example_glfw_vulkan/: example_glfw_vulkan.vcxproj  main.cpp
examples/example_glut_opengl2/: Makefile  example_glut_opengl2.vcxproj  main.cpp
examples/example_null/: Makefile  main.cpp
examples/example_sdl_directx11/: example_sdl_directx11.vcxproj  main.cpp
examples/example_sdl_metal/: Makefile  main.mm
examples/example_sdl_opengl2/: Makefile  README.md  example_sdl_opengl2.vcxproj  main.cpp
examples/example_sdl_opengl3/: Makefile  README.md  example_sdl_opengl3.vcxproj  main.cpp
examples/example_sdl_sdlrenderer/: Makefile  README.md  example_sdl_sdlrenderer.vcxproj  main.cpp
src/: a_stb_truetype.rs  a_tables.rs  a_widgets.rs  activate_flags.rs  axis.rs  backend_flags.rs  binary_to_compressed_c.cpp  bit_array.rs  bit_array_ops.rs  bit_vector.rs  border.rs  bullet.rs  button.rs  button_flags.rs  button_ops.rs  checkbox_ops.rs  child.rs  child_ops.rs  chunk_stream.rs  clipboard.rs  clipboard_ops.rs  clipper.rs  color.rs  color_edit_flags.rs  color_mod.rs  color_ops.rs  column.rs  combo.rs  combo_box.rs  combo_flags.rs  combo_preview_data.rs  compression.rs  condition.rs  config.rs  config_flags.rs  constants.rs  content.rs  content_ops.rs  context.rs  context_hook.rs  (+426 more)
(+437 files in other folders)
