[package]
name = "imgui-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
fern = "0.6.1"
libc = "0.2"
bitfield = "0.14"


[target.'cfg(windows)'.dependencies]
windows-sys = {version = "0.42", features = ["Win32_Globalization"]}
