# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "imgui-rs"
version = "0.1.0"
edition = "2021"
authors = ["azrael cyrex562@gmail.com"]
description = "full port of the Dear ImGui library to rust"
keywords = ["gui","ffi"]
license = "MIT 2.0"
readme = "README.md"

[dependencies]
log = "0.4.17"
fern = "0.6.1"
libc = "0.2"
bitfield = "0.14"
ron = "0.8"

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D9",
    "Win32_Graphics_Direct3D10",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D_Fxc",
    "Graphics",
    "System",
    "Gaming",
    "UI",
    "Win32",
]

[dependencies.sdl2]
version = "0.35.2"
features = ["bundled", "gfx", "image", "mixer", "use-pkgconfig", 'static-link', "ttf"]

[dependencies.serde]
version = "1.0.147"
features = ["derive"]

[lib]
path = "src/lib.rs"
